# aws_secrets_serviced

./: MANIFEST.in  PACKAGING.md  README.md  aws-secrets-serviced-order.conf  config.ini.example  pyproject.toml  setup.cfg  tox.ini
aws_secrets_serviced/: __main__.py
packaging/debian/: .gitignore  aws-secrets-serviced.install  aws-secrets-serviced.service  changelog  control  copyright  rules
