[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "aws-secrets-serviced"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
    "boto3",
    "sdnotify",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "boto3-stubs",
    "pylint",
    "pytest",
]

[[project.authors]]
name = "Alon Bar-Lev"
email = "alon.barlev@gmail.com"

[project.scripts]
aws-secrets-serviced = "aws_secrets_serviced.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "build*",
    "tests*",
]

[tool.black]
line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "sdnotify.*",
]
ignore_missing_imports = true

[tool.pylint.MASTER]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true
known_first_party = [
    "aws_secrets_serviced",
]

[tool.check-manifest]
ignore = [
    "*.egg-info",
    "*.egg-info/*",
    "PKG-INFO",
]
ignore-default-rules = true
