[metadata]
name = aws_secrets_serviced
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alonbl/aws_secrets_serviced
author = Alon Bar-Lev
author_email = alon.barlev@gmail.com
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =
    boto3
    sdnotify
python_requires > = 3.9
setup_requires =
    setuptools

[options.extras_require]
dev =
    mypy
    pre-commit
    pylint

[options.package_data]
aws_secrets_serviced =
    py.typed

[egg_info]
tag_date = 0

[flake8]
max-line-length = 120
