[metadata]
name = aws_secrets_serviced
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alonbl/aws_secrets_serviced
author = Alon Bar-Lev
author_email = alon.barlev@gmail.com
license = BSD-2-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License

[options]
packages = find:

[options.entry_points]
console_scripts =
    aws-secrets-serviced = aws_secrets_serviced:main
